# secure-chat

./: Cargo.toml  LESSON.md  README.md
src/: main.rs
src/controllers/: app.rs  mod.rs
src/models/: contacts.rs  crypt.rs  discovery.rs  identity.rs  keyexchange.rs  message.rs  mod.rs  network.rs
src/utils/: mod.rs  port.rs
src/views/: chat_window.rs  mod.rs
