[package]
name = "secure-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = { version = "2.1", features = ["serde"] }